# ChangeLog for net-im/vacuum-kinotifications
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Oct 2010; Nikoli <nikoli@lavabit.com>
  +vacuum-kinotifications-9999.ebuild, +metadata.xml:
  initial ebuild
