@@ -1,3 +1,3 @@
-EBUILD vacuum-kinotifications-9999.ebuild 705 RMD160 cbe4b46bf426a8b77b7c29bee1e61d8e8e5df2da SHA1 dfea6bf2475a85446bcbfdf15bcfcd6824626e76 SHA256 1b6670553e3cf9b7f666f1989dc0e588c5df1c4f44ba7b20fec9f951c32a8f7c
-MISC ChangeLog 245 RMD160 5b78f9e818ea48526066ee44b96d5ecf86f73d4d SHA1 95cb17790c80526fc246948cf93b77136937c978 SHA256 0e2481a80ddba2620a31491979ffcdff89e4c24104943ed1696db00948c2389e
+EBUILD vacuum-kinotifications-9999.ebuild 977 RMD160 22576a931d4a7e5d45937110f9f833d4e9612dbe SHA1 23a8b5594bb085106e11d5d6ec17ff99964c195a SHA256 9a98ad1abfb30b369b6311f6f467b5178c8b237c50bb1af1e9ad63a7ed91541b
+MISC ChangeLog 341 RMD160 ed0b42c7007525481e81452010e50c39a767c224 SHA1 4d6363a71c148333eab182301711dd07fa469824 SHA256 78998f72652d7d8d713cc97d1a52f6403a1b6d417ebe3d7708a7a8b65124a679
 MISC metadata.xml 248 RMD160 2418fc56f477393d0e1091455ff5523b58c07a83 SHA1 834f92f9ff1f64ceaac6c39e835ea63873d03d51 SHA256 baa352e20702c6ad701749c41aa0a8cce9c1fc62511a96b9adefc42a788026ab
