@@ -1,6 +1,10 @@
 # ChangeLog for net-im/vacuum-kinotifications
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  21 Mar 2011; Nikoli <nikoli@lavabit.com>
+  vacuum-kinotifications-9999.ebuild:
+  add linguas
 
   27 Oct 2010; Nikoli <nikoli@lavabit.com>
   +vacuum-kinotifications-9999.ebuild, +metadata.xml:
